fix: preserve whitespace and line breaks in multi-line text fields

--- a/app/public/styles/site/layout.less
+++ b/app/public/styles/site/layout.less
@@ -57,3 +57,7 @@
     border-color: lightgray;
     border-style: solid;
 }
+
+.multi-line {
+    white-space: pre-wrap;
+}
